create delete + fetch to local API

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "puppeteer": "^4.0.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
